--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pg": "^6.0.3",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
+    "redux-thunk": "^2.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2"
   },
