--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "knex": "^0.11.9",
+    "moment": "^2.14.1",
     "pg": "^6.0.3",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
-    "redux-thunk": "^2.1.0",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.11.4",
