--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "isomorphic-fetch": "^2.2.1",
     "knex": "^0.11.9",
     "moment": "^2.14.1",
     "pg": "^6.0.3",
