--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "moment": "^2.14.1",
     "pg": "^6.0.3",
     "react": "^15.2.1",
+    "react-countdown-clock": "^1.0.5",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
