--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       "react"
     ]
   },
-  "author": "",
+  "author": "Alex Bang, Eric Snell, & Ben Young",
   "license": "ISC",
   "repository": {
     "type": "git",
@@ -44,7 +44,6 @@
     "moment": "^2.14.1",
     "pg": "^6.0.3",
     "react": "^15.2.1",
-    "react-countdown-clock": "^1.0.5",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
@@ -55,12 +54,8 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "babel-register": "^6.11.6",
-    "chai": "^3.5.0",
     "chokidar-cli": "^1.2.0",
     "http-server": "^0.9.0",
-    "mocha": "^2.5.3",
-    "react-addons-test-utils": "^15.2.1",
     "webpack": "^1.13.1"
   }
 }
