--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "watch:css": "npm run build:css && chokidar css/style.css -c 'npm run build:css'",
     "build:js": "npm run clean:js && webpack",
     "watch:js": "npm run build:js && webpack --watch",
-    "clean:js": "rm -f build/$npm_package_name.$npm_package_version.js build/$npm_package_name.$npm_package_version.js.map"
+    "clean:js": "rm -f build/$npm_package_name.$npm_package_version.js build/$npm_package_name.$npm_package_version.js.map",
+    "heroku-postbuild": "npm run build"
   },
   "babel": {
     "presets": [
